# socks

./: SockBase.cpp  SockBase.h  SockDgram.cpp  SockDgram.h  SockHandle.cpp  SockHandle.h  SockPlatform.h  SockStream.cpp  SockStream.h  main.cpp  meson.build  windows.txt
examples/: forward.cpp
